2.5/extending/README.md
# Extending Noodl

Your Noodl workspace can easily be extended with your own custom nodes. This is done by building **Modules** using the Noodl SDK, in a way very similar to how we do internally at Noodl.

A module can be as big or as small as you want - anything from a simple one-node visual component to a full design system or payment integration.

## Prerequisites

Building your own Module requires knowledge of JavaScript and (if you want to build visual components) some React. You also need to be somewhat comfortable with a terminal.

?> **TypeScript** definitions are underway, please reach out on our [Discord](https://discord.gg/23xU2hYrSJ) or the [Forum](https://forum.noodl.net/) if you're interested trying out the beta.

## Contents

[Create a simple Logic node](extending/create-lib.md)<br/>
This guide will show you how to install the Noodl CLI and create a single Logic node in Noodl. This is a good starting point to cover before diving into the other guides.

[Create a Visual node with React](extending/create-react-lib.md)<br/>
This guide will show you how to add React components to your Noodl workspace so that you can quickly build Visual nodes for your applications.

## New workflows

While you can build and scale most apps using only the built in core nodes, extending Noodl opens up a new set of possibilities. Especially when it comes to workflow - combining the best parts from the all-code and no-code programming paradigms. It can open up new hybrid roles within an organization and make Noodl an API for iteration and cross disciplinary collaboration.
